--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,18 @@
           <version>3.1.1</version>
           <scope>provided</scope>
       </dependency>
+
+      <dependency>
+          <groupId>com.github.Slimefun</groupId>
+          <artifactId>Slimefun4</artifactId>
+          <version>RC-28</version>
+          <scope>provided</scope>
+          <exclusions>
+              <exclusion>
+                  <groupId>io.github.baked-libs</groupId>
+                  <artifactId>dough-api</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
   </dependencies>
 </project>
